--- a/Part_I_KMeans_SCG_O.ipynb
+++ b/Part_I_KMeans_SCG_O.ipynb
@@ -1738,7 +1738,7 @@
     "import os\n",
     "\n",
     "# Create a directory to store CSV files\n",
-    "output_directory = \"csv_files\"\n",
+    "output_directory = \"features_csv\"\n",
     "os.makedirs(output_directory, exist_ok=True)\n",
     "\n",
     "# Loop through the DataFrames and save them as CSV files\n",
