--- a/Part_I_KMeans_SCG_O.ipynb
+++ b/Part_I_KMeans_SCG_O.ipynb
@@ -705,9 +705,7 @@
     }
    ],
    "source": [
-    "snaps_A0 = 13\n",
-    "\n",
-    "for ind in range(1, snaps_A0+1):\n",
+    "for ind in range(1, num_snaps_A0):\n",
     "    # Locate the starting index for the snapshot 100ps (if ind=1), 200ps(if ind=2),etc.\n",
     "    # 20th set will have slice indices [19*NAT, 20*NAT]\n",
     "    s1 = int((ind*100)/5.-1)*NAT\n",
